# stellarium-dynamic-plugin

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DynamicPluginTemplate.cpp  DynamicPluginTemplate.hpp
src/gui/: DynamicPluginTemplateWindow.cpp  DynamicPluginTemplateWindow.hpp  dynamicPluginTemplateWindow.ui
